<resources>
    <string name="app_name">Polity-Correct</string>
    <string name="btnLogin">התחבר</string>
    <string name="account_mail">מייל</string>
    <string name="password">סיסמא</string>
    <string name="confirmPass">אימות סיסמה</string>
    <string name="send">שלח</string>
    <string name="rateTheVote">עד כמה חוק זה חשוב לך?</string>
    <string name="Against">נגד</string>
    <string name="abstain">נמנע</string>
    <string name="pro">בעד</string>
    <string name="details">תיאור ופירוט</string>
    <string name="title_activity_signup_pm">SignupPM</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="choose_proposition">בחר חוק</string>
    <string name="all_citizen">כלל האזרחים</string>
    <string name="my_pg">המפלגה שלי</string>
    <string name="vote_here">הצבע כאן!</string>
    <string name="result_citizens">הצבעות האזרחים</string>
    <string name="update_settings">עדכון פרטים</string>
    <string name="show_propositions">צפה בחוקים</string>
    <string name="change_pass">החלף סיסמא</string>
    <string name="show_statistics">צפה בסטטיסטיקות</string>
    <string name="vote">הצבע</string>
    <string name="hello">שלום</string>
    <string name="logout">התנתק</string>
    <string name="new_user">משתמש חדש?</string>
    <string name="signup_citizen">הרשם\nכאזרח</string>
    <string name="signup_parliament">הירשם\nכחבר כנסת</string>
    <string name="show">צפה</string>
    <string name="full_name">שם מלא</string>
    <string name="year_of_birth">שנת לידה</string>
    <string name="choose_pg">בחר מפלגה</string>
    <string name="gender">מגדר</string>
    <string name="male">זכר</string>
    <string name="female">נקבה</string>
    <string name="update">עדכן</string>
    <string name="end">סיום</string>
    <string name="ok">אישור</string>
    <string name="votes_of">התפלגות ההצבעות לפי:</string>
    <string name="connect_us">צור קשר</string>
    <string name="average">ממוצע דירוג החוק</string>
    <string name="menu_home">דף הבית</string>
    <string name="statistics">סטטיסטיקות</string>
    <string name="vote_for_prop">הצבע לחוק</string>
    <string name="match_parliament">התאם לי חבר כנסת</string>
    <string name="loading">רק רגע..\nאנחנו חושבים</string>
    <string name="matching">הנה ההתאמה שמצאנו עבורך:</string>
    <string name="chart_label">התפלגות ההתאמות</string>
    <string name="all_users">כל המשתמשים</string>
</resources>