<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Vote">

    <include layout="@layout/layout_standard_page" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.58"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <RadioGroup
        android:layout_width="339dp"
        android:layout_height="56dp"
        android:layout_gravity="start"
        android:layoutDirection="rtl"
        android:orientation="horizontal"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4">

        <RadioButton
            android:id="@+id/agreement"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alef"
            android:text="@string/pro"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/impossible"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alef"
            android:text="@string/Noun"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/against"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alef"
            android:text="@string/Against"
            android:textSize="20sp" />
    </RadioGroup>


    <TextView
        android:id="@+id/voteId"
        android:layout_width="260dp"
        android:layout_height="46dp"
        android:background="@drawable/back"
        android:fontFamily="@font/alef"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textDirection="rtl"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.68"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.128" />

    <TextView
        android:id="@+id/voteDetails"
        android:layout_width="260dp"
        android:layout_height="98dp"
        android:background="@drawable/back"
        android:fontFamily="@font/alef"
        android:text="@string/details"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textDirection="rtl"
        android:textSize="50px"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.68"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.238" />

    <TextView
        android:id="@+id/grading"
        android:layout_width="231dp"
        android:layout_height="47dp"
        android:fontFamily="@font/alef"
        android:text="@string/rateTheVote"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textDirection="rtl"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.733"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.502" />

    <Button
        android:id="@+id/sendVote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.077"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.688" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="80dp"
        android:layout_height="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo" />

</androidx.constraintlayout.widget.ConstraintLayout>