<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseResultUsers">

    <include layout="@layout/layout_standard_page"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:id="@+id/title_page"
        android:layout_width="90dp"
        android:layout_height="45dp"
        android:layout_gravity="start"
        android:fontFamily="@font/alef"
        android:layoutDirection="rtl"
        android:text="@string/choose_proposition"
        android:textAlignment="textStart"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <Spinner
        android:id="@+id/chooseProp"
        android:layout_width="220dp"
        android:layout_height="45dp"
        android:background="@android:drawable/btn_dropdown"
        android:layoutDirection="rtl"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <Button
        android:id="@+id/allUsersBtn"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:fontFamily="@font/alef"
        android:layoutDirection="rtl"
        android:text="@string/all_citizen"
        android:onClick="onClickAllUsers"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <Button
        android:id="@+id/specificPoliticalGroupBtn"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:fontFamily="@font/alef"
        android:layoutDirection="rtl"
        android:text="@string/my_pg"
        android:onClick="onClickSpecificPoliticalGroup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

        <ImageButton
            android:id="@+id/LogoButton"
            android:layout_width="112dp"
            android:layout_height="75dp"
            android:backgroundTint="@color/ic_launcher_background"
            android:onClick="OnClickLogo"
            android:scaleType="centerInside"
            android:tint="#0FFFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/polity_correct_logo" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/basic_pm_menu"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"/>


</androidx.drawerlayout.widget.DrawerLayout>